menu dinamico agregado y sidebar foncinando

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+#themecolors .selector{
+    cursor: pointer;
+}
+
 .fast {
     -webkit-animation-duration:0.3s;
     animation-duration:0.3s;
